wip cmake and vcpkg, added boost external unit test framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 project(tfc-framework)
 
+include(cmake/config.cmake)
+include(cmake/options.cmake)
+include(cmake/warnings.cmake)
+
 add_subdirectory(exes)
 add_subdirectory(libs)
