--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -1,12 +1,12 @@
 project(confman)
 cmake_minimum_required(VERSION 3.21)
 
-add_library(confman STATIC
+add_library(libconfman STATIC
     src/confman.cpp
 )
-add_library(tfc::confman ALIAS confman)
+add_library(tfc::confman ALIAS libconfman)
 
-target_include_directories(confman
+target_include_directories(libconfman
     PUBLIC
         inc/public
     PRIVATE
