Wrap logger object

--- a/libs/logger/tests/CMakeLists.txt
+++ b/libs/logger/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ find_package(ut CONFIG REQUIRED)
 
 add_executable(logging_test logging_test.cpp)
 
-target_link_libraries(logging_test PRIVATE Boost::ut tfc::logger)
+target_link_libraries(logging_test PRIVATE Boost::ut tfc::logger tfc::base)
 
 add_test(
   NAME
@@ -11,3 +11,5 @@ add_test(
   COMMAND
     logging_test
 )
+
+add_subdirectory(examples)
