--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(confman)
 cmake_minimum_required(VERSION 3.21)
 
+find_package(glaze CONFIG REQUIRED)
+find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
+
 add_library(libconfman STATIC
     src/confman.cpp
 )
@@ -13,6 +16,10 @@ target_include_directories(libconfman
         inc
 )
 
+target_link_libraries(libconfman
+  PRIVATE
+  glaze::glaze
+  )
 add_library_to_docs(tfc::confman)
 
 add_subdirectory(tests)
