--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(confman)
 add_subdirectory(ipc)
 add_subdirectory(rpc)
 add_subdirectory(stx)
+add_subdirectory(ec)
 
 add_library(tfc INTERFACE)
 add_library(tfc::tfc ALIAS tfc)
@@ -15,4 +16,5 @@ target_link_libraries(tfc
     tfc::base,
     tfc::ipc,
     tfc::rpc,
+    tfc::ec
 )
