Ethercat library added as vcpkg basic structure for calling the c library started

--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -2,6 +2,7 @@ project(ec)
 cmake_minimum_required(VERSION 3.21)
 
 find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
+find_path(ETHERCAT_INCLUDE_DIRS "ethercat/ecrt.h")
 
 add_library(ec STATIC src/ec.cpp)
 add_library(tfc::ec ALIAS ec)
@@ -10,7 +11,15 @@ target_include_directories(ec
   PUBLIC
     inc/public
   ${BEXT_SML_INCLUDE_DIRS}
+  ${ETHERCAT_INCLUDE_DIRS}
+  PRIVATE
+    inc/
 )
+
+target_link_libraries(ec
+  PUBLIC
+   ethercat
+  )
 
 #add_library_to_docs(tfc::ec)
 
