First iteration of ethercat to ipc communication

--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -5,6 +5,7 @@ find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
 find_path(ETHERCAT_INCLUDE_DIRS "ethercat/ecrt.h")
 find_path(SOEM_INCLUDE_DIRS "soem/ethercat.h")
 find_package(fmt CONFIG REQUIRED)
+find_package(mp-units CONFIG REQUIRED)
 
 
 add_library(ec STATIC src/ec.cpp)
@@ -23,8 +24,13 @@ target_link_directories(ec PUBLIC /home/omar/source/repos/framework/vcpkg-sysroo
 target_link_libraries(ec
   PUBLIC
     libsoem.a
+    tfc::ipc
   PRIVATE
     fmt::fmt
+    mp-units::si
+    mp-units::isq
+    mp-units::core
+    mp-units::si-cgs
   )
 
 #add_library_to_docs(tfc::ec)
