wip adding exe of confman

--- a/exes/confman/CMakeLists.txt
+++ b/exes/confman/CMakeLists.txt
@@ -3,9 +3,14 @@ project(confman)
 add_executable(confman
     src/main.cpp
 )
+
+find_package(Boost REQUIRED COMPONENTS program_options)
+
 target_link_libraries(confman
   PUBLIC
-    tfc::confman
+    Boost::boost
+    Boost::program_options
     tfc::base
+    tfc::confman
     tfc::logger
 )
