--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -11,6 +11,7 @@ jobs:
     name: 'build and run tests'
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         build_type: [debug, release]
     env:
