--- a/exes/confman/CMakeLists.txt
+++ b/exes/confman/CMakeLists.txt
@@ -1,4 +1,10 @@
-project(confman)
+project(tfc-confman
+  VERSION ${CMAKE_PROJECT_VERSION}
+  DESCRIPTION
+    "Configuration manager daemon, communicates via unix file sockets providing RPC and notification layer."
+  HOMEPAGE_URL ${CMAKE_PROJECT_HOMEPAGE_URL}
+  LANGUAGES CXX
+)
 
 add_executable(confman
     src/main.cpp
@@ -13,4 +19,33 @@ target_link_libraries(confman
     tfc::base
     tfc::confman
     tfc::logger
+)
+
+install(
+  FILES
+    systemd/confman.service
+  DESTINATION
+    ${CMAKE_INSTALL_LIBDIR}/systemd/user/
+  CONFIGURATIONS Release
+)
+install(
+  FILES
+    systemd/confman.socket
+  DESTINATION
+    ${CMAKE_INSTALL_LIBDIR}/systemd/user/
+  CONFIGURATIONS Release
+)
+install(
+  TARGETS
+    confman
+  DESTINATION
+    ${CMAKE_INSTALL_BINDIR}/
+  CONFIGURATIONS Release
+)
+install(
+  TARGETS
+    confman
+  DESTINATION
+    ${CMAKE_INSTALL_BINDIR}/debug/
+  CONFIGURATIONS Debug
 )
