--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -2,10 +2,9 @@ project(ec)
 cmake_minimum_required(VERSION 3.21)
 
 find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
-find_path(ETHERCAT_INCLUDE_DIRS "ethercat/ecrt.h")
-find_path(SOEM_INCLUDE_DIRS "soem/ethercat.h")
 find_package(fmt CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
+find_package(soem CONFIG REQUIRED)
 
 
 add_library(ec STATIC src/ec.cpp src/base.cpp)
@@ -14,16 +13,14 @@ add_library(tfc::ec ALIAS ec)
 target_include_directories(ec
   PUBLIC
     inc/public
-  ${BEXT_SML_INCLUDE_DIRS}
-  ${SOEM_INCLUDE_DIRS}/soem
+    ${BEXT_SML_INCLUDE_DIRS}
   PRIVATE
     inc/
 )
-target_link_directories(ec PUBLIC ${SOEM_INCLUDE_DIRS}/../lib/)
 
 target_link_libraries(ec
   PUBLIC
-    libsoem.a
+    soem
     tfc::ipc
   PRIVATE
     fmt::fmt
@@ -31,7 +28,7 @@ target_link_libraries(ec
     mp-units::isq
     mp-units::core
     mp-units::si-cgs
-  )
+)
 
 add_library_to_docs(tfc::ec)
 
