--- a/libs/logger/CMakeLists.txt
+++ b/libs/logger/CMakeLists.txt
@@ -12,18 +12,18 @@ target_include_directories(logger
     inc
 )
 
-if (LINUX)
-  add_library(systemdlib INTERFACE)
-  find_package(PkgConfig)
-  pkg_check_modules(SYSTEMD "libsystemd")
-  if(${SYSTEMD_FOUND})
-    message("Found systemd")
-  else()
-    error("Systemd not found")
-  endif()
-  target_include_directories(systemdlib INTERFACE ${SYSTED_INCLUDE_DIRS})
-  target_link_libraries(systemdlib INTERFACE ${SYSTEMD_LIBRARIES})
-endif()
+#if (LINUX)
+#  add_library(systemdlib INTERFACE)
+#  find_package(PkgConfig)
+#  pkg_check_modules(SYSTEMD "libsystemd")
+#  if(${SYSTEMD_FOUND})
+#    message("Found systemd")
+#  else()
+#    error("Systemd not found")
+#  endif()
+#  target_include_directories(systemdlib INTERFACE ${SYSTED_INCLUDE_DIRS})
+#  target_link_libraries(systemdlib INTERFACE ${SYSTEMD_LIBRARIES})
+#endif()
 
 find_package(fmt CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
@@ -34,7 +34,7 @@ target_link_libraries(logger
   PRIVATE
     spdlog::spdlog
     tfc::base
-    systemdlib
+#    systemdlib
     tfc::stx
 )
 
