--- a/.github/workflows/test-internal-action.yml
+++ b/.github/workflows/test-internal-action.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: actions/hello-world-docker-action@v2
+        uses: skaginn3x/framework
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
