--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -18,6 +18,10 @@ jobs:
           packages: >
             g++ curl zip unzip tar build-base musl ninja python3 make linux-headers openssl-dev git rpm-dev
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
+      - name: Hello
+        run: |
+          echo "hello world"
+        shell: alpine.sh
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v10
         with:
