--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -23,12 +23,13 @@ jobs:
         run: uname -m
         shell: alpine.sh {0}
       - name: Restore artifacts, or setup vcpkg (do not install any package)
-        uses: lukka/run-vcpkg@v10
+        uses: lukka/run-vcpkg@v11
         with:
           useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
-#          vcpkgDirectory: '/opt/vcpkg'
+          vcpkgDirectory: '/opt/vcpkg'
           # If not using a submodule for vcpkg sources, this specifies which commit
           # id must be checkout from a Git repo. It must not set if using a submodule
           # for vcpkg.
           vcpkgGitCommitId: '19af97cba8ca48474e4ad15a24ed50271a9ecdac'
           vcpkgJsonGlob: 'vcpkg.json'
+          vcpkgJsonIgnores: "['**/vcpkg-overlays/**']"
