--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -19,8 +19,12 @@ jobs:
           packages: >
             g++ curl zip unzip tar build-base musl ninja python3 make linux-headers openssl-dev git rpm-dev
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
-      - name: UNAME
-        run: uname -m
+      - name: Prepare vcpkg
+        run: |
+          cd /opt/
+          git clone https://github.com/microsoft/vcpkg.git
+          cd vcpkg
+          ./bootstrap-vcpkg.sh
         shell: alpine.sh {0}
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
