--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -17,16 +17,14 @@ jobs:
         with:
           branch: v3.17
           packages: >
-            g++ curl zip unzip tar build-base musl ninja python3 make linux-headers openssl-dev git rpm-dev
+            g++ curl zip unzip tar build-base musl ninja python3 cmake make linux-headers openssl-dev git rpm-dev
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
-            cmake
       - name: Prepare vcpkg
-        run: |
+        run: ln -s /bin/sh /usr/bin/sh
 #          cd /opt/
 #          git clone https://github.com/microsoft/vcpkg.git
 #          cd vcpkg
 #          ./bootstrap-vcpkg.sh
-          ln -s /bin/sh /usr/bin/sh
         shell: alpine.sh --root {0}
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
