--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
         with:
-          useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
+          useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh --root
           vcpkgDirectory: '/opt/vcpkg'
           # If not using a submodule for vcpkg sources, this specifies which commit
           # id must be checkout from a Git repo. It must not set if using a submodule
