--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Prepare vcpkg
         run: |
           ln -s /bin/sh /usr/bin/sh
-          rm -r /opt/vcpkg
 #          cd /opt/
 #          git clone https://github.com/microsoft/vcpkg.git
 #          cd vcpkg
@@ -32,10 +31,10 @@ jobs:
         uses: lukka/run-vcpkg@v10
         with:
           useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
-          vcpkgDirectory: '/opt/vcpkg'
+          vcpkgDirectory: '/opt/vcpkg1'
           # If not using a submodule for vcpkg sources, this specifies which commit
           # id must be checkout from a Git repo. It must not set if using a submodule
           # for vcpkg.
           vcpkgGitCommitId: '19af97cba8ca48474e4ad15a24ed50271a9ecdac'
           vcpkgJsonGlob: 'vcpkg.json'
-          vcpkgJsonIgnores: "['**/vcpkg-overlays/**']"
+#          vcpkgJsonIgnores: "['**/vcpkg-overlays/**']"
